--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,23 @@
 .Rhistory
 .RData
 .Ruserdata
+.settings
+/*/target/
+**/dist/
+/*/.settings
+/*/package-lock.json
+/*/.project
+/*/.classpath
+*.jsfdia
+*.metadata
+**/.idea
+*.iml
+*.swp
+*.swo
+**/unit-result.report.html
+**/node_modules/
+/**/env.properties
+/**/npm-debug.log.*
+**/.sonar
+**/*npm-debug.log
+
