Acesso ao banco e predição

--- a/nodejs-project/package.json
+++ b/nodejs-project/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/drferreira/survey-quality-prediction#readme",
   "dependencies": {
     "decision-tree": "0.3.1",
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "mongodb": "3.1.4"
   }
 }
